# Hackadoo-2023

./: .gitignore  NLP.py  README.md  build.sh  manage.py  pyproject.toml
articles/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
articles/migrations/: 0001_initial.py  0002_initial.py  0003_article_title.py  0004_alter_article_abstract.py  0005_article_gif_url_article_photo_url.py
docker/: Dockerfile  docker-compose.yml  start_django.sh
docker/nginx/: nginx.conf
frontend/: package-lock.json  package.json  vue.config.js  webpack-stats.json
frontend/public/: index.html
frontend/src/: App.vue
frontend/src/assets/fonts/: 1001fonts-ds-walbaumfraktur-eula.txt
frontend/src/components/: BirthArticle.vue  NecrologyAndBirthArticle.vue  NecrologyArticle.vue  NewsArticle.vue
frontend/src/router/: index.js
frontend/src/src/: axios.js  store.js  utils.js
frontend/src/views/: HomePage.vue  NewsFeed.vue
hackadoo/: asgi.py  serializers.py  settings.py  urls.py  views.py  wsgi.py
hackadoo/templates/: base.html  index.html  index_debug.html
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_viewed_articles.py
