[tool.poetry]
name = "hackadoo"
version = "0.1.0"
description = "MIT"
authors = ["Minigrim0, Morti, ZoroxaT, Nico"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.7"
djangorestframework = "^3.14.0"
requests = "^2.28.2"
wikipedia-api = "^0.5.8"
google-cloud-language = "^2.9.1"
numpy = "^1.24.2"
djangorestframework-simplejwt = "^5.2.2"
django-extensions = "^3.2.1"
psycopg2 = "^2.9.6"

[tool.poetry.group.dev.dependencies]
django-webpack-loader = "^1.8.1"
isort = "^5.12.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
